# rust-axum-project

./: .env_example  .gitignore  Cargo.toml  README.md  docker-compose.yml
bundles/crates/hello-world/: Cargo.toml
bundles/crates/hello-world/src/: routes.rs
bundles/crates/users/: Cargo.toml
bundles/crates/users/src/: routes.rs
migrations/: 20240120133418_create_users_table.sql  20240126111247_create_notes_table.sql  20240126163349_create_redirections_table.sql  20240204165129_create_chatroom_table.sql  20240204165145_create_chat_messages_table.sql  20240204165155_create_chat_tokens_table.sql  20240204170808_create_chat_sessions_table.sql
src/: ctx.rs  errors.rs  main.rs
src/api/: auth_mw.rs  mod.rs  routes.rs
src/api/chat/: config.rs  handlers.rs  models.rs
src/api/hello_world/: routes.rs
src/api/notes/: handlers.rs  models.rs  routes.rs
src/api/redirection/: handlers.rs  models.rs  routes.rs
src/api/users/: handlers.rs  mod.rs  models.rs  routes.rs
src/config/: connection.rs
