[package]
name = "rust-axum-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }

hello-world = { version = "0.1.0", path = "bundles/crates/hello-world" }
users = { version = "0.1.0", path = "bundles/crates/users" }
