[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
bcrypt = "0.15.0"
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
async-trait = "0.1.77"
rand = "0.8.5"
